resolved history src comments